# Proyecto-Final-POO

./: CMakeLists.txt  COMPILAR_CON_VISUAL_STUDIO.md  GUIA_PRUEBAS.md  PASOS_PARA_PROBAR.txt  build_cmake.ps1  build_server.ps1  build_server_v2.ps1  build_visual_studio.ps1  guia.txt  install_cmake.ps1  install_mingw.ps1  servidor_app  servidor_rpc_app  setup_compiler.ps1
client/include/: ClienteRPC.h  ControladorCliente.h  InterfazGrafica.h  MensajeCliente.h  Usuario.h  VistaConsola.h  VistaGUI.h  main_cliente.h
client/src/: ControladorCliente.cpp  InterfazGrafica.cpp  Usuario.cpp  VistaGUI.cpp  main_cliente.cpp
cliente/: ClienteRPC.py  GestorArchivosLocal.py  VistaGUI.py  __init__.py  main.py
cliente/src/: __init__.py  cliente_robot.py
cliente/tests/: __init__.py  test_cliente.py
cliente/tools/: __init__.py  mock_servidor.py  probar_conexion.py
cliente_1/: GestorArchivosLocal.py  main.py
cliente_py/: run_cliente.py
cliente_py/src/: ClienteRPC.cpp  MensajeCliente.cpp  VistaConsola.cpp  config.py
cliente_py/tests/: test_controlador.py
desktop_ui/: README.md  __init__.py  admin_ui.py  operator_ui.py  requirements.txt  rpc_adapter.py  run_with_mock.py
server/: prueba  prueba_comunicacion
server/include/: AdminCLI.h  BaseDeDatos.h  ControladorGeneral.h  ControladorRobot.h  GestorDeArchivos.h  GestorDeReportes.h  GestorUsuarios.h  GestorUsuariosMySQL.h  MensajeServidor.h  PALogger.h  PuertoSerie.h  Robot.h  ServidorRPC.h  UsuarioServidor.h  sha256.h
server/src/: AdminCLI.cpp  BaseDeDatos.cpp  ControladorGeneral.cpp  ControladorRobot.cpp  GestorDeArchivos.cpp  GestorDeReportes.cpp  GestorUsuarios.cpp  GestorUsuariosMySQL.cpp  MensajeServidor.cpp  PALogger.cpp  PuertoSerie.cpp  Robot.cpp  ServidorRPC.cpp  (+3 more)
(+9 files in other folders)
